Projet_GL/src/test/deca/syntax/invalid/unprovided/bad_float_hexa.deca
// Mauvaise écriture hexa

0x120x
